Added a note regarding CVS access.

--- a/index.html
+++ b/index.html
@@ -24,5 +24,9 @@
 send an email to <a
 href="mailto:siteinfo-subscribe@lists.em.ca">siteinfo-subscribe@lists.em.ca</a>.</p>
 
+<p>The source code for siteinfo is available by anonymous CVS.  Set your
+<tt>CVSROOT</tt> to <tt>:pserver:cvs@bruce-guenter.dyndns.org:/CVS</tt>,
+login with an empty password, and check out the siteinfo module.</p>
+
 </body>
 </html>
