Fix email addresses and drop the missing CVS repository link

--- a/index.html
+++ b/index.html
@@ -20,13 +20,8 @@
 </table>
 <input type=submit><input type=reset></form></p>
 
-<p>A mailing list has been formed to discuss siteinfo.  To subscribe,
-send an email to <a
-href="mailto:siteinfo-subscribe@lists.em.ca">siteinfo-subscribe@lists.em.ca</a>.</p>
-
-<p>The source code for siteinfo is available by anonymous CVS.  Set your
-<tt>CVSROOT</tt> to <tt>:pserver:cvs@bruce-guenter.dyndns.org:/CVS</tt>,
-login with an empty password, and check out the siteinfo module.</p>
+<p>Please direct all comments and especially omissions to
+<a href=\"mailto:bruce@untroubled.org\">Bruce Guenter</a>.</p>
 
 </body>
 </html>
